components/itemCard/itemCard.module.scss
@use '../../styles/spacing.module.scss' as spacing;
@use '../../styles/typography.module.scss' as typography;
@use '../../styles/breakpoints.module.scss' as breakpoints;

.card {
  display: flex;
  gap: spacing.$small-space;

  &:hover .card-item_title {
    color: #0b5cab;
    font-weight: typography.$font-weight-bold;
  }
}

.card-picture {
  height: auto;
  width: 15rem;
  flex-shrink: 0;
}

.card-detail {
  color: #363636;
  flex-grow: 1;
  gap: spacing.$medium-space;

  & > * {
    padding-top: spacing.$x-large-space;
  }
}

.card-item_additional-info {
  font-size: typography.$text-large-3xl;
  display: flex;
  gap: spacing.$medium-space;
  align-items: center;
}

.card-item_location {
  color: #717171;
  display: flex;
  align-self: flex-end;
  font-size: typography.$text-base;
  min-width: 8.25rem;
  margin-left: auto;
  margin-right: spacing.$large-space;
}

.card-item_title {
  font-size: typography.$text-large-xl;

  &::after {
    content: attr(data-text);
    font-weight: typography.$font-weight-bold;
    display: block;
    height: 0;
    pointer-events: none;
    overflow: hidden;
    visibility: hidden;
    user-select: none;
  }
}

@media (min-width: breakpoints.$mobile-breakpoint) {
  .card-item_title {
    max-width: 70%;
  }
}

@media (max-width: breakpoints.$mobile-breakpoint) {
  .card-picture {
    width: 11rem;
  }

  .card-item_location {
    display: none;
  }
}

